Support legacy type hints and channel-aware generation with safe DTO mapping
- add `@AgentVisible(type = ...)` for runtime element-type hints on raw/wildcard collection/iterable/array fields
- add `@AgenticExposed(channels = ...)` with default `{AI, API}` to control MCP vs REST/OpenAPI exposure
- split entity processing into register + generate passes so cross-entity DTO references resolve reliably
- map entity references to DTOs across direct fields, collections, iterables, and arrays in `DtoGenerator`
- add cycle detection for entity reference mapping via `ThreadLocal<Set<Object>>`
- add `ReturnKind` model and update MCP/REST/OpenAPI generators for collection/iterable/array mapping paths
- dedupe service processing when both type-level and method-level `@AgenticExposed` are present
- add `ReturnTypeValidator` to enforce safe `returnType` compatibility (including array element checks)
- enforce safe `@AgentVisible(type = ...)` assignability checks (reject unsafe downcasts, including arrays)
- expand processor tests for hints, channel filtering, duplicate-generation avoidance, and cast-safety validation
- update demo customer entity/service/tests to cover legacy raw-collection exposure and API-only channel behavior